# netgraph3d

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
netgraph3d/: __init__.py  core.py
