[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netgraph3d"
version = "0.1.12"
description = "Convert any NetworkX graph to an interactive 3D HTML visualization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["networkx"]

[project.urls]
Homepage = "https://github.com/mobina1380/netgraph3d/"